# aplayer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  test.c  test.py  vcpkg.json
src/: ap_array.c  ap_crypto.c  ap_dict.c  ap_playlist.c  ap_queue.c  app.c  clock.c  exception_linux.c  fs_linux.c  image.c  imgconv.c  libaudio.c  libcli.c  libdecoder.c  libgui.c  libhelper.c  libplayer.c  libplaylist.c  libprocessing.c  libsession.c  libstream.c  libtime.c  libwindows.c  logger.c  main.c  playlist.c  plugin.c  sb.c  session.c  state.c  utils.c
src/audio/: ap_audio.c  ap_audio_dec.c  ap_audio_output.c  ap_audio_processing.c  apl.c  audio.c  audio_effect.c  audio_mixer.c  audio_source.c  plugin.c
src/audio/analyzer/: audio_fft.c  audio_rms.c
src/audio/effect/: audio_autogain.c  audio_filter.c  audio_gain.c  audio_pan.c
src/audio/include/: ap_audio.h  ap_audio_dec.h  ap_audio_output.h  ap_audio_processing.h  ap_audio_sample.h
src/audio/plugins/: build_plugins.cmake  builtin_gain.c
src/audio/source/: audio_file.c
src/common/: libclic.c  libfilec.c  libhelperc.c
src/include/: _math.h  ap_array.h  ap_crypto.h  ap_dict.h  ap_event.h  ap_flags.h  ap_math.h  ap_os.h  ap_playlist.h  ap_queue.h  ap_terminal.h  ap_timing.h  ap_utils.h  apl.h  apl_api.h  app.h  arena_allocator.h  array.h  audio.h  audio_analyzer.h  audio_callback.h  audio_effect.h  audio_format.h  audio_mixer.h  audio_source.h  clock.h  color.h  dict.h  ds.h  exception.h  fs.h  image.h  image_renderer.h  imgconv.h  layout.h  libaudio.h  libcli.h  libdecoder.h  libfile.h  libgui.h  (+29 more)
src/interface/: libcli.h  libfile.h  libos.h
src/linux/: libcli.c
src/macos/: libfile.c  libhelper.c
src/os/common/: ap_os_common.c  ap_terminal_common.c  ap_utils_common.c
src/os/unix/: ap_timing.c
src/os/windows/: ap_terminal.c  ap_timing.c  ap_utils.c
src/struct/: arena_allocator.c  array.c  dict.c  ds.c  pathlib.c  queue.c  ring_buf.c
src/term/: term_draw.c  term_linux.c
src/ui/: ap_ui.c  ap_widget.c  color.c  image_renderer.c  layout.c  ui.c  ui_manager.c  ui_parser.c  wpl.c
src/ui/include/: ap_ui.h  ap_widgets.h
src/ui/tui/: ap_draw.c  ap_tui.c
src/ui/tui/include/: ap_draw.h  ap_tui.h  ap_widgets.h
src/ui/tui/widgets/: ap_widget_filelist.c
src/ui/widgets/: art.c  build_widgets.cmake  builtin_list.c  debug.c  hprogress.c  list.c  media_control.c  rect.c  statusline.c  tabs.c  timestamp.c  volume.c  vu_meter.c  widgets.h
src/windows/: libcli.c  libfile.c  libhelper.c  libhook.c
tests/: array_test.c  base_test.h  dict_test.c  queue_test.c  ring_buf_test.c  test_arena.c  test_array.c  test_color.c  test_dict.c  test_draw.c  test_pathlib.c  test_queue.c  test_ringbuf.c  test_string.c
